k8s-traefik/k8s-traefik-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traefik
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: traefik
      release: traefik
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: 8ddc33e3917855d50dff9147dd7922b72b85b8cf862959f197046e9a0b02919c
      creationTimestamp: null
      labels:
        app: traefik
        chart: traefik-1.59.1
        heritage: Tiller
        release: traefik
    spec:
      containers:
      - args:
        - --configfile=/config/traefik.toml
        - --api
        - --insecureskipverify
        - --kubernetes
        - --logLevel="DEBUG"
        image: traefik:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 2
        name: traefik
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 8080
          name: dashboard
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 100m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /ssl
          name: traefik-dashboard-ssl
#        - mountPath: /ssl/k8s
#          name: k8s-dashboard-certs
        - mountPath: /config
          name: config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 60
      volumes:
      - name: traefik-dashboard-ssl
        secret:
          defaultMode: 420
          secretName: traefik-dashboard-ssl
#      - name: k8s-dashboard-certs
#        secret:
#          defaultMode: 420
#          secretName: k8s-dashboard-secret
      - configMap:
          defaultMode: 420
          name: traefik
        name: config
