k8s-traefik/k8s-traefik-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik-dashboard.k8s-pactera-deg.com
spec:
  ports:
  - name: dashboard
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: traefik
    release: traefik
  sessionAffinity: None
  type: ClusterIP
