k8s-traefik/k8s-traefik-all.yaml
#---
#apiVersion: v1
#kind: ServiceAccount
#metadata:
#  name: traefik-ingress-controller
#  namespace: default
#---
#kind: ClusterRole
#apiVersion: rbac.authorization.k8s.io/v1beta1
#metadata:
#  name: traefik-ingress-controller
#rules:
#- apiGroups:
#  - ""
#  resources:
#  - services
#  - endpoints
#  - secrets
#  verbs:
#  - get
#  - list
#  - watch
#- apiGroups:
#  - extensions
#  resources:
#  - ingresses
#  verbs:
#  - get
#  - list
#  - watch
#- apiGroups:
#  - extensions
#  resources:
#  - ingresses/status
#  verbs:
#  - update
#---
#kind: ClusterRoleBinding
#apiVersion: rbac.authorization.k8s.io/v1beta1
#metadata:
#  name: traefik-ingress-controller
#roleRef:
#  apiGroup: rbac.authorization.k8s.io
#  kind: ClusterRole
#  name: traefik-ingress-controller
#subjects:
#- kind: ServiceAccount
#  name: traefik-ingress-controller
#  namespace: default infra-traefik
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traefik
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: traefik
      release: traefik
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: traefik
        release: traefik
    spec:
      containers:
      - args:
        - --configfile=/config/traefik.toml
        - --api
        - --insecureskipverify
        - --kubernetes
        - --logLevel="DEBUG"
        image: traefik:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 2
        name: traefik
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 8080
          name: dashboard
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 100m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /ssl
          name: traefik-dashboard-ssl
#        - mountPath: /ssl/k8s
#          name: k8s-dashboard-certs
        - mountPath: /config
          name: config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 60
      volumes:
      - name: traefik-dashboard-ssl
        secret:
          defaultMode: 420
          secretName: traefik-dashboard-ssl
#      - name: k8s-dashboard-certs
#        secret:
#          defaultMode: 420
#          secretName: k8s-dashboard-secret
      - configMap:
          defaultMode: 420
          name: traefik
        name: config
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app: traefik
    release: traefik
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: default
spec:
  ports:
  - name: dashboard
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: traefik
    release: traefik
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  name: traefik-dashboard
  namespace: default
spec:
  rules:
  - host: traefik-dashboard.local
    http:
      paths:
      - backend:
          serviceName: traefik-dashboard
          servicePort: 8080
  tls:
  - secretName: traefik-dashboard-ssl
