k8s-traefik/k8s-traefik-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
#    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
#    traefik.ingress.kubernetes.io/redirect-entry-point: https
#    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  name: kubernetes-dashboard
  selfLink: /apis/extensions/v1beta1/namespaces/kube-system/ingresses/kubernetes-dashboard
spec:
  rules:
  - host: traefik-dashboard.pactera-deg.com
    http:
      paths:
      - backend:
          serviceName: traefik-dashboard
          servicePort: 8080
  tls:
  - secretName: traefik-dashboard-ssl
